--- a/index.html
+++ b/index.html
@@ -18,14 +18,21 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="./assets/logo.svg" alt="logo" />
-      <nav>
+      <nav class="navigation">
+        <img class="logo" src="./assets/logo.svg" alt="logo" />
         <ul>
           <li><a href="#">HOMEM</a></li>
           <li><a href="#">MULHER</a></li>
           <li><a href="#">CRIANÇA</a></li>
           <li><a href="#">CUSTOMIZAR</a></li>
         </ul>
+        <input
+          type="search"
+          name="search"
+          id="search"
+          placeholder="Pesquisar"
+        />
+        <img src="./assets/icon-bag.svg" alt="sacola" />
       </nav>
     </header>
     <main>
