--- a/index.html
+++ b/index.html
@@ -19,20 +19,22 @@
   <body>
     <header>
       <nav class="navigation">
-        <img class="logo" src="./assets/logo.svg" alt="logo" />
         <ul>
+          <li><img class="logo" src="./assets/logo.svg" alt="logo" /></li>
           <li><a href="#">HOMEM</a></li>
           <li><a href="#">MULHER</a></li>
           <li><a href="#">CRIANÇA</a></li>
           <li><a href="#">CUSTOMIZAR</a></li>
+          <li>
+            <input
+              type="search"
+              name="search"
+              id="search"
+              placeholder="Pesquisar"
+            />
+          </li>
+          <li><img src="./assets/icon-bag.svg" alt="sacola" /></li>
         </ul>
-        <input
-          type="search"
-          name="search"
-          id="search"
-          placeholder="Pesquisar"
-        />
-        <img src="./assets/icon-bag.svg" alt="sacola" />
       </nav>
     </header>
     <main>
@@ -42,12 +44,16 @@
           Este tênis foi construído para te dar uma melhor performance nos
           treinos e corridas.
         </p>
-        <p>R$ 1.000,00</p>
+        <p class="preco">R$ 1.000,00</p>
         <button>COMPRAR</button>
       </section>
 
       <section class="galery">
-        <img src="./assets/tenis-1-ampliado.png" alt="tênis ampliado" />
+        <img
+          class="focusImg"
+          src="./assets/tenis-1-ampliado.png"
+          alt="tênis ampliado"
+        />
         <div class="navGalery">
           <img src="./assets/tenis-1-galeria.png" alt="tênis galeria 1" />
           <img src="./assets/tenis-2-galeria.png" alt="tênis galeria 2" />
