Finalizando CSS web com footer
Finalizando o CSS web configurando footer e verificando demais elementos. Também foi inserido o vídeo do youtube.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
 
     <title>Rocketseat_Desafios_RocketShoes</title>
   </head>
@@ -62,14 +63,24 @@
       </section>
     </main>
     <footer>
-      <div class="video">Vídeo do Youtube</div>
+      <div class="video">
+        <iframe
+          src="https://www.youtube.com/embed/WP8C4RSKrnY"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
       <ul>
         <li><a href="#">FACEBOOK</a></li>
         <li><a href="#">INSTAGRAM</a></li>
         <li><a href="#">YOUTUBE</a></li>
         <li><a href="#">TWITTER</a></li>
       </ul>
-      <p><a href="#">EXPLORE MAIS</a></p>
+      <a class="explore" href="#"
+        >EXPLORE MAIS <img src="./assets/icon-arrow.svg" alt="seta"
+      /></a>
     </footer>
   </body>
 </html>
