Finalizando CSS main e footer mobile
Finalizando CSS main e footer mobile ajustando larguras e centralizando textos

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
     <footer>
       <div class="video">
         <iframe
+          width=""
+          height="150"
           src="https://www.youtube.com/embed/WP8C4RSKrnY"
           title="YouTube video player"
           frameborder="0"
