--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
   </head>
   <body>
     <header>
-      <nav class="navigation">
-        <ul>
+      <nav id="navigation" class="navigation">
+        <ul class="expandedMenu">
           <li class="logo">
             <a href="#"><img src="./assets/logo.svg" alt="logo" /></a>
           </li>
-          <li><a href="#">HOMEM</a></li>
-          <li><a href="#">MULHER</a></li>
-          <li><a href="#">CRIANÇA</a></li>
-          <li><a href="#">CUSTOMIZAR</a></li>
+          <li class="expandedMenu"><a href="#">HOMEM</a></li>
+          <li class="expandedMenu"><a href="#">MULHER</a></li>
+          <li class="expandedMenu"><a href="#">CRIANÇA</a></li>
+          <li class="expandedMenu"><a href="#">CUSTOMIZAR</a></li>
           <li>
             <input
+              class="expandedMenu"
               type="search"
               name="search"
               id="search"
@@ -78,6 +79,28 @@
             </button>
           </li>
         </ul>
+        <button
+          onclick="closeMenu()"
+          class="closeMenu"
+          aria-label="Fechar Menu"
+          aria-expanded="true"
+        >
+          <svg
+            width="40"
+            height="40"
+            viewBox="0 0 40 40"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M30 10L10 30M10 10L30 30"
+              stroke="#000000"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </button>
       </nav>
     </header>
     <main>
@@ -127,4 +150,6 @@
       /></a>
     </footer>
   </body>
+
+  <script src="./main.js"></script>
 </html>
