--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer id="footer">
       <div class="video">
         <iframe
           width=""
